package NDnnProto;


message TSigmoidConst {
    optional double Threshold = 1;
    optional double Slope = 2;
}

